--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -5,17 +5,63 @@
     android:orientation="vertical"
     tools:context="com.swipeacademy.multiplicationtableswipe.PlayFragment">
 
-    <FrameLayout
-        android:id="@+id/swipe_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
     <TextView
         android:id="@+id/play_question"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="1 x 12 ="/>
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        style="@style/Base.TextAppearance.AppCompat.Display3"
+        android:fontFamily="casual"
+        android:textStyle="bold"
+        android:textColor="#000"
+        tools:text="1 x 12 ="/>
 
-    </FrameLayout>
+    <RelativeLayout
+        android:id="@+id/play_answer_choices_area"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3">
+
+        <TextView
+            android:id="@+id/choice1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            style="@style/Base.TextAppearance.AppCompat.Display2"
+            android:text="1"/>
+        <TextView
+            android:id="@+id/choice2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            style="@style/Base.TextAppearance.AppCompat.Display2"
+            android:text="2"/>
+        <TextView
+            android:id="@+id/choice3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            style="@style/Base.TextAppearance.AppCompat.Display2"
+            android:text="3"/>
+        <TextView
+            android:id="@+id/choice4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            style="@style/Base.TextAppearance.AppCompat.Display2"
+            android:text="4"/>
+
+
+
+    </RelativeLayout>
+
 </LinearLayout>
