--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <GridLayout
+
+    <RelativeLayout
+        android:id="@+id/scores_grid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="10dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:background="@color/colorAccent"
         android:columnCount="2">
 
-        <TextView
-            android:id="@+id/current_score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_gravity="end"
-            android:text="@string/current_score"/>
 
         <Chronometer
             android:id="@+id/current_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:layout_gravity="end" />
+            android:textStyle="bold"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"/>
+
+        <View
+            android:id="@+id/remaining_circle"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/remaining_circle"
+            android:layout_centerInParent="true"/>
 
 
         <TextView
@@ -32,16 +41,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:textSize="18sp"
-            android:text="@string/remaining_questions" />
-    </GridLayout>
+            android:textSize="35sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="@string/remaining_questions"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
+
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"/>
 
     <fragment
         android:id="@+id/play_container"
         android:name="com.swipeacademy.multiplicationtableswipe.PlayFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/scores_grid"
+        android:layout_above="@id/adView"
         tools:context="com.swipeacademy.multiplicationtableswipe.PlayFragment"
         tools:layout="@layout/fragment_play"/>
 
-</LinearLayout>
+</RelativeLayout>
