--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -2,66 +2,141 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.swipeacademy.multiplicationtableswipe.PlayFragment">
-
-    <TextView
-        android:id="@+id/play_question"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        style="@style/Base.TextAppearance.AppCompat.Display3"
-        android:fontFamily="casual"
-        android:textStyle="bold"
-        android:textColor="#000"
-        tools:text="1 x 12 ="/>
 
     <RelativeLayout
         android:id="@+id/play_answer_choices_area"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/choice1"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/question_container"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            style="@style/Base.TextAppearance.AppCompat.Display2"
-            android:text="1"/>
-        <TextView
-            android:id="@+id/choice2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            style="@style/Base.TextAppearance.AppCompat.Display2"
-            android:text="2"/>
-        <TextView
-            android:id="@+id/choice3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            style="@style/Base.TextAppearance.AppCompat.Display2"
-            android:text="3"/>
-        <TextView
-            android:id="@+id/choice4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            style="@style/Base.TextAppearance.AppCompat.Display2"
-            android:text="4"/>
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/play_question_border"
+                    android:layout_alignParentTop="true"
+                    android:background="@color/questionBorder" />
+
+                <View
+                    android:layout_width="@dimen/play_question_border"
+                    android:layout_height="100dp"
+                    android:layout_alignParentLeft="true"
+                    android:background="@color/questionBorder" />
+
+                <View
+                    android:layout_width="@dimen/play_question_border"
+                    android:layout_height="100dp"
+                    android:layout_alignParentRight="true"
+                    android:background="@color/questionBorder" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/play_question1"
+                    style="@style/question"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="1" />
 
 
+                <TextView
+                    android:id="@+id/multiplication_sign"
+                    style="@style/question"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="x" />
 
+                <TextView
+                    android:id="@+id/play_question2"
+                    style="@style/question"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    tools:text="10" />
+
+                <TextView
+                    android:id="@+id/equal_sign"
+                    style="@style/question"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:text="="/>
+
+                </LinearLayout>
+
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/play_question_border"
+                android:background="@color/questionBorder"  />
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/question_container">
+
+            <TextView
+                android:id="@+id/choice1"
+                style="@style/question"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_margin="10dp"
+                android:text="1" />
+
+            <TextView
+                android:id="@+id/choice2"
+                style="@style/question"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="10dp"
+                android:text="2" />
+
+            <TextView
+                android:id="@+id/choice3"
+                style="@style/question"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_margin="10dp"
+                android:text="3" />
+
+            <TextView
+                android:id="@+id/choice4"
+                style="@style/question"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="10dp"
+                android:text="4" />
+
+        </RelativeLayout>
     </RelativeLayout>
-
 </LinearLayout>
