--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#0077c2</color>
     <color name="colorPrimaryLight">#80d6ff</color>
     <color name="colorAccent">#ffa726</color>
+
+    <color name="questionBorder">#0077c2</color>
 </resources>
