--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,9 @@
         <item name="windowActionBar">false</item>
     </style>
 
+    <style name="question" parent="Base.TextAppearance.AppCompat.Display2">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#000</item>
+    </style>
+
 </resources>
