--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorPrimaryLight">#80d6ff</color>
     <color name="colorAccent">#ffa726</color>
 
-    <color name="questionBorder">#0077c2</color>
+    <color name="questionBorder">#42a5f5</color>
 </resources>
