--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <RelativeLayout
         android:id="@+id/scores_grid"
         android:layout_width="match_parent"
@@ -15,9 +14,9 @@
         android:layout_marginBottom="10dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
+        android:elevation="4dp"
         android:background="@color/colorAccent"
         android:columnCount="2">
-
 
         <Chronometer
             android:id="@+id/current_time"
@@ -25,6 +24,7 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:layout_marginRight="20dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"/>
 
@@ -35,6 +35,13 @@
             android:background="@drawable/remaining_circle"
             android:layout_centerInParent="true"/>
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            android:elevation="8dp"
+            android:src="@drawable/ic_home_white_48dp"/>
 
         <TextView
             android:id="@+id/remaining_questions"
@@ -42,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:textSize="35sp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="#000"
             android:text="@string/remaining_questions"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
