--- a/app/src/main/res/layout/dialogfragment_play_end.xml
+++ b/app/src/main/res/layout/dialogfragment_play_end.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -20,14 +19,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimaryDark"
+        android:textStyle="bold"
         android:gravity="center"
-        android:text="Complete!"/>
+        android:text="RESULTS"/>
 
     <TextView
         android:id="@+id/play_final_score"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:text="@string/final_score"/>
 
     <TextView
@@ -35,11 +38,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:text="@string/final_time"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <ImageButton
