--- a/app/src/main/res/layout/fragment_history_list.xml
+++ b/app/src/main/res/layout/fragment_history_list.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
+    <Button
+        android:id="@+id/delete_history_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete History"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/history_list_recycler_view"
@@ -10,10 +16,6 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/delete_history_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete History"/>
+
 
 </LinearLayout>
