--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -35,13 +35,15 @@
             android:background="@drawable/remaining_circle"
             android:layout_centerInParent="true"/>
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/play_home_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
-            android:elevation="8dp"
-            android:src="@drawable/ic_home_white_48dp"/>
+            android:background="@color/colorAccent"
+            android:src="@drawable/ic_home_white_36dp"
+            android:contentDescription="Go home" />
 
         <TextView
             android:id="@+id/remaining_questions"
