--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -7,11 +7,20 @@
     android:orientation="vertical"
     tools:context="com.swipeacademy.multiplicationtableswipe.HistoryActivity">
 
-    <fragment
-        android:id="@+id/history_list_container"
-        android:name="com.swipeacademy.multiplicationtableswipe.HistoryListFragment"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/history_viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_history_list" />
+        android:layout_height="wrap_content">
+
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/pager_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:paddingBottom="4dp"
+            android:paddingTop="4dp">
+
+        </android.support.v4.view.PagerTabStrip>
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
