--- a/app/src/main/res/layout-land/fragment_play.xml
+++ b/app/src/main/res/layout-land/fragment_play.xml
@@ -15,8 +15,7 @@
             android:id="@+id/question_container"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -50,37 +49,36 @@
                     android:layout_centerInParent="true"
                     android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/play_question1"
-                    style="@style/question"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="1" />
+                    <TextView
+                        android:id="@+id/play_question1"
+                        style="@style/question"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="1" />
 
+                    <TextView
+                        android:id="@+id/multiplication_sign"
+                        style="@style/question"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:text="x" />
 
-                <TextView
-                    android:id="@+id/multiplication_sign"
-                    style="@style/question"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:text="x" />
+                    <TextView
+                        android:id="@+id/play_question2"
+                        style="@style/question"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="10" />
 
-                <TextView
-                    android:id="@+id/play_question2"
-                    style="@style/question"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="10" />
-
-                <TextView
-                    android:id="@+id/equal_sign"
-                    style="@style/question"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:text="="/>
+                    <TextView
+                        android:id="@+id/equal_sign"
+                        style="@style/question"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:text="="/>
 
                 </LinearLayout>
 
@@ -95,10 +93,6 @@
 
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/question_container">
 
             <TextView
                 android:id="@+id/choice1"
@@ -141,20 +135,12 @@
                 android:text="4" />
 
             <ImageView
-                android:id="@+id/swipe_circle_img"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_margin="40dp"
-                android:background="@drawable/swipe_circle"
-                android:layout_centerInParent="true"/>
-
-            <ImageView
                 android:id="@+id/swipe_arrow_1"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/swipe_arrow"
                 android:layout_centerInParent="true"
-                android:layout_toRightOf="@id/swipe_circle_img"/>
+                android:layout_toRightOf="@id/question_container"/>
 
             <ImageView
                 android:id="@+id/swipe_arrow_2"
@@ -162,7 +148,7 @@
                 android:layout_height="25dp"
                 android:src="@drawable/swipe_arrow"
                 android:layout_centerInParent="true"
-                android:layout_below="@id/swipe_circle_img"
+                android:layout_below="@id/question_container"
                 android:rotation="90"/>
 
             <ImageView
@@ -172,7 +158,7 @@
                 android:src="@drawable/swipe_arrow"
                 android:rotation="180"
                 android:layout_centerInParent="true"
-                android:layout_toLeftOf="@id/swipe_circle_img"/>
+                android:layout_toLeftOf="@id/question_container"/>
 
             <ImageView
                 android:id="@+id/swipe_arrow_4"
@@ -181,8 +167,7 @@
                 android:src="@drawable/swipe_arrow"
                 android:rotation="270"
                 android:layout_centerInParent="true"
-                android:layout_above="@id/swipe_circle_img"/>
+                android:layout_above="@id/question_container"/>
 
         </RelativeLayout>
-    </RelativeLayout>
 </LinearLayout>
