--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,6 +30,7 @@
             android:layout_gravity="center"
             android:background="@color/colorAccent"
             android:layout_marginBottom="5dp"
+            android:onClick="practice"
             android:text="Practice"/>
 
         <Button
