--- a/app/src/main/res/layout-land/fragment_play.xml
+++ b/app/src/main/res/layout-land/fragment_play.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.swipeacademy.multiplicationtableswipe.PlayFragment">
 
@@ -34,6 +33,7 @@
                     android:layout_width="@dimen/play_question_border"
                     android:layout_height="100dp"
                     android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
                     android:background="@color/questionBorder" />
 
                 <View
@@ -41,6 +41,7 @@
                     android:layout_width="@dimen/play_question_border"
                     android:layout_height="100dp"
                     android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:background="@color/questionBorder" />
 
                 <LinearLayout
@@ -63,7 +64,8 @@
                         android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
-                        android:text="x" />
+                        android:contentDescription="@string/times"
+                        android:text="@string/times_x" />
 
                     <TextView
                         android:id="@+id/play_question2"
@@ -78,7 +80,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
-                        android:text="="/>
+                        android:paddingStart="10dp"
+                        android:contentDescription="@string/equals_description"
+                        android:text="@string/equals"/>
 
                 </LinearLayout>
 
@@ -100,9 +104,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_margin="10dp"
-                android:text="1" />
+                tools:text="1" />
 
             <TextView
                 android:id="@+id/choice2"
@@ -112,7 +117,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="10dp"
-                android:text="2" />
+                tools:text="2" />
 
             <TextView
                 android:id="@+id/choice3"
@@ -122,7 +127,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_margin="10dp"
-                android:text="3" />
+                tools:text="3" />
 
             <TextView
                 android:id="@+id/choice4"
@@ -132,7 +137,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
                 android:layout_margin="10dp"
-                android:text="4" />
+                tools:text="4" />
 
             <ImageView
                 android:id="@+id/swipe_arrow_1"
@@ -140,6 +145,7 @@
                 android:layout_height="25dp"
                 android:src="@drawable/swipe_arrow"
                 android:layout_centerInParent="true"
+                android:layout_toEndOf="@id/question_container"
                 android:layout_toRightOf="@id/question_container"/>
 
             <ImageView
@@ -158,6 +164,7 @@
                 android:src="@drawable/swipe_arrow"
                 android:rotation="180"
                 android:layout_centerInParent="true"
+                android:layout_toStartOf="@id/question_container"
                 android:layout_toLeftOf="@id/question_container"/>
 
             <ImageView
