--- a/app/src/main/res/layout-land/activity_play.xml
+++ b/app/src/main/res/layout-land/activity_play.xml
@@ -37,7 +37,6 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:elevation="4dp"
@@ -51,6 +50,7 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"/>
 
@@ -62,7 +62,7 @@
             android:layout_centerHorizontal="true"
             android:background="@color/colorAccent"
             android:src="@drawable/ic_home_white_36dp"
-            android:contentDescription="Go home" />
+            android:contentDescription= "@string/click_to_go_home_description" />
 
         <View
             android:id="@+id/remaining_circle"
