--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -25,8 +25,10 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
 
         <View
             android:id="@+id/remaining_circle"
@@ -40,10 +42,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_centerVertical="true"
             android:background="@color/colorAccent"
             android:src="@drawable/ic_home_white_36dp"
-            android:contentDescription="Go home" />
+            android:contentDescription="@string/click_to_go_home_description" />
 
         <TextView
             android:id="@+id/remaining_questions"
