--- a/app/src/main/res/layout/activity_practice_recycler_item.xml
+++ b/app/src/main/res/layout/activity_practice_recycler_item.xml
@@ -8,15 +8,33 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="5dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        android:orientation="vertical">
+
     <TextView
         android:id="@+id/practice_recycler_item_textView"
         style="@style/Base.TextAppearance.AppCompat.Display3"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="100dp"
         android:gravity="center"
         android:textStyle="bold"
         android:background="@color/colorPrimary"
         android:textColor="#FFF"
         tools:text="1" />
+
+        <TextView
+            android:id="@+id/practice_recycler_item_title_textView"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
+            android:background="@color/colorPrimary"
+            android:textStyle="bold"
+            android:textColor="#FFF"
+            tools:text="Ones Table"/>
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
