--- a/app/src/main/res/layout/dialogfragment_play_end.xml
+++ b/app/src/main/res/layout/dialogfragment_play_end.xml
@@ -25,7 +25,7 @@
         android:gravity="center"
         android:background="@color/colorAccent"
         android:paddingTop="10dp"
-        android:text="Awesome Job!"/>
+        tools:text="@string/awesome_job"/>
 
     <TextView
         android:id="@+id/play_final_score"
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@color/colorAccent"
-            android:text="Corrections"/>
+            android:text="@string/corrections"/>
 
     </LinearLayout>
 
