--- a/app/src/main/res/layout/dialogfragment_play_end.xml
+++ b/app/src/main/res/layout/dialogfragment_play_end.xml
@@ -81,6 +81,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@color/colorAccent"
+            android:fontFamily="cursive"
+            android:textStyle="bold"
             android:text="@string/corrections"/>
 
     </LinearLayout>
