--- a/app/src/main/res/layout/fragment_history_list.xml
+++ b/app/src/main/res/layout/fragment_history_list.xml
@@ -3,16 +3,16 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/delete_history_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/delete_history"/>
+    <!--<Button-->
+        <!--android:id="@+id/delete_history_button"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/delete_history"/>-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:orientation="vertical">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="400dp"-->
+        <!--android:orientation="vertical">-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/history_list_recycler_view"
@@ -22,15 +22,15 @@
 
     </android.support.v7.widget.RecyclerView>
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/history_lineChart"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+        <!--<com.github.mikephil.charting.charts.LineChart-->
+            <!--android:id="@+id/history_lineChart"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1">-->
 
-        </com.github.mikephil.charting.charts.LineChart>
+        <!--</com.github.mikephil.charting.charts.LineChart>-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 
 
